2021-04-19  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.9-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.9-alpha04: Aliso Summit';git push
	git tag -a 4.9.9-alpha04 -m 'ncremap crv area wrn, ccw_chk fix';git push --tags

	* Merge Henry's fixes that provide area for masked cells

	* Tidy nco_kd.c and brethen

2021-04-17  Charlie Zender  <zender@uci.edu>

	* nco_chk_map() add mask_a/b error diagnostics

2021-04-15  Charlie Zender  <zender@uci.edu>

	* nco.texi clarify that nco_grd_nfr() converts floating point zeros to integer zero masks values

	* ncremap nco_grd_nfr() protect area <=4*pi assertion since area might be in, e.g., km2 (ELM, RACMO)

2021-04-11  Charlie Zender  <zender@uci.edu>

	* ncremap nco_ccw_chk() fix bug where quadrilateral vertex D was always overwritten by vertex A
	Since 2016 this bug divided all quadrilaterals in two, halving all inferred curvilinear grid areas?

	* ncremap nco_grd_nfr() WARNING when global grid has suspicious area

2021-04-08  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.9-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.9-alpha03: Modern Times';git push
	git tag -a 4.9.9-alpha03 -m 'nco.texi: ncvardmnlatlon; ncclimo hfs mth_srt/end; ncremap CISM glc msk, rint() integers';git push --tags

	* ncremap nco_ntp_vrt() add same rint() code as nco_rgr_wgt()

2021-04-07  Charlie Zender  <zender@uci.edu>

	* ncremap nco_rgr_wgt() always rint() regridded values before output when netCDF implicitly demotes them to integers

2021-04-06  Charlie Zender  <zender@uci.edu>

	* in.cdl change CDL type "long", now obsolete in netCDF 4.8.0, to "int" in CDL files

	* ncremap add LATIXY, LONGXY coordinates and lsmlat, lsmlon dimensions to internal database to support regridding CISM/CLM/ELM glacier masks

2021-03-31  Charlie Zender  <zender@uci.edu>

	* ncclimo implement mth_srt/end with clm_md=hfs for Yannick Peings who verifies it works

	* nco.texi add filters ncvardmnlst and ncvardmnlatlon for Jim Edwards